Added the official images to each topic

--- a/topics.html
+++ b/topics.html
@@ -105,8 +105,8 @@
           </div>
           <div class="col-sm-12 col-md-6 mt-3">
             <img
-              src="https://i.imgur.com/4XKa50N.jpg"
-              alt="people in theatre"
+              src="https://i.imgur.com/oHZQWH4.jpg"
+              alt="Man giving a presentation"
             />
           </div>
           <div class="col-sm-12 col-md-6 mt-3">
@@ -118,8 +118,8 @@
           </div>
           <div class="col-sm-12 col-md-6 mt-3">
             <img
-              src="https://i.imgur.com/4XKa50N.jpg"
-              alt="people in theatre"
+              src="https://i.imgur.com/EFFWHaV.jpg"
+              alt="Man seating, holding his head"
             />
           </div>
           <div class="col-sm-12 col-md-6 mt-3">
@@ -136,8 +136,8 @@
           </div>
           <div class="col-sm-12 col-md-6 mt-3">
             <img
-              src="https://i.imgur.com/4XKa50N.jpg"
-              alt="people in theatre"
+              src="https://i.imgur.com/00pgkjv.jpg"
+              alt="Man looking at wall of information"
             />
           </div>
           <div class="col-sm-12 col-md-6 mt-3">
@@ -149,8 +149,8 @@
           </div>
           <div class="col-sm-12 col-md-6 mt-3">
             <img
-              src="https://i.imgur.com/4XKa50N.jpg"
-              alt="people in theatre"
+              src="https://i.imgur.com/9UJCoId.jpg"
+              alt="People talking around a laptop"
             />
           </div>
           <div class="col-sm-12 col-md-6 mt-3">
@@ -166,8 +166,8 @@
           </div>
           <div class="col-sm-12 col-md-6 mt-3">
             <img
-              src="https://i.imgur.com/4XKa50N.jpg"
-              alt="people in theatre"
+              src="https://i.imgur.com/3q5tgpy.jpg"
+              alt="Two monitors and mobile phone with design images"
             />
           </div>
           <div class="col-sm-12 col-md-6 mt-3">
@@ -181,8 +181,8 @@
           </div>
           <div class="col-sm-12 col-md-6 mt-3">
             <img
-              src="https://i.imgur.com/4XKa50N.jpg"
-              alt="people in theatre"
+              src="https://i.imgur.com/fIqzhGd.jpg"
+              alt="Man getting ready to work with tools"
             />
           </div>
           <div class="col-sm-12 col-md-6 mt-3">
@@ -202,8 +202,8 @@
           </div>
           <div class="col-sm-12 col-md-6 mt-3">
             <img
-              src="https://i.imgur.com/4XKa50N.jpg"
-              alt="people in theatre"
+              src="https://i.imgur.com/NTGPu1N.jpg"
+              alt="Notebook with wireframes"
             />
           </div>
           <div class="col-sm-12 col-md-6 mt-3">
@@ -218,8 +218,8 @@
           </div>
           <div class="col-sm-12 col-md-6 mt-3">
             <img
-              src="https://i.imgur.com/4XKa50N.jpg"
-              alt="people in theatre"
+              src="https://i.imgur.com/OD4Qpmj.jpg"
+              alt="Two people shaking hands"
             />
           </div>
           <div class="col-sm-12 col-md-6 mt-3">
@@ -236,8 +236,8 @@
           </div>
           <div class="col-sm-12 col-md-6 mt-3">
             <img
-              src="https://i.imgur.com/4XKa50N.jpg"
-              alt="people in theatre"
+              src="https://i.imgur.com/dVsni7v.jpg"
+              alt="Group of people with arms raised"
             />
           </div>
           <div class="col-sm-12 col-md-6 mt-3">
@@ -250,8 +250,8 @@
           </div>
           <div class="col-sm-12 col-md-6 mt-3">
             <img
-              src="https://i.imgur.com/4XKa50N.jpg"
-              alt="people in theatre"
+              src="https://i.imgur.com/ooRJGL2.jpg"
+              alt="A price tag over a blue background"
             />
           </div>
           <div class="col-sm-12 col-md-6 mt-3">
@@ -268,8 +268,8 @@
           </div>
           <div class="col-sm-12 col-md-6 mt-3">
             <img
-              src="https://i.imgur.com/4XKa50N.jpg"
-              alt="people in theatre"
+              src="https://i.imgur.com/JOVg6Lk.jpg"
+              alt="A judging panel talking"
             />
           </div>
           <div class="col-sm-12 col-md-6 mt-3">
@@ -282,8 +282,8 @@
           </div>
           <div class="col-sm-12 col-md-6 mt-3">
             <img
-              src="https://i.imgur.com/4XKa50N.jpg"
-              alt="people in theatre"
+              src="https://i.imgur.com/m5vO38E.jpg"
+              alt="A man celebrating"
             />
           </div>
           <div class="col-sm-12 col-md-6 mt-3">
