Small improvement to faq page

--- a/faq.html
+++ b/faq.html
@@ -87,7 +87,7 @@
                 aria-label="Startup Academy Email Address"
                 >here</a
               >
-              if you don't see your question here.
+              if you don't see your question.
             </h2>
             <h3>1. How much does the programme costs?</h3>
             <p>
