--- a/topics.html
+++ b/topics.html
@@ -282,8 +282,8 @@
           </div>
           <div class="col-sm-12 col-md-6 mt-3">
             <img
-              src="https://i.imgur.com/m5vO38E.jpg"
-              alt="A man celebrating"
+              src="https://i.imgur.com/jSH6Pc3.jpg"
+              alt="Two women celebrating"
             />
           </div>
           <div class="col-sm-12 col-md-6 mt-3">
