Small improvement to topics spacing

--- a/topics.html
+++ b/topics.html
@@ -96,6 +96,7 @@
     </section>
     <!-- /. Hero Section -->
 
+    <!-- Sprints Section -->
     <section class="sprints">
       <div class="container">
         <div class="row">
@@ -130,7 +131,7 @@
               entrepreneur.
             </p>
           </div>
-          <div class="col-12 mt-4">
+          <div class="col-12 mt-5">
             <h2>Sprint Two</h2>
             <hr />
           </div>
@@ -160,7 +161,7 @@
               feedback from users and potential users.
             </p>
           </div>
-          <div class="col-12 mt-4">
+          <div class="col-12 mt-5">
             <h2>Sprint Three</h2>
             <hr />
           </div>
@@ -196,7 +197,7 @@
               and most affordable tools to get started.
             </p>
           </div>
-          <div class="col-12 mt-4">
+          <div class="col-12 mt-5">
             <h2>Sprint Four</h2>
             <hr />
           </div>
@@ -230,7 +231,7 @@
               to split equity with co-founders, and if a co-founder is needed.
             </p>
           </div>
-          <div class="col-12 mt-4">
+          <div class="col-12 mt-5">
             <h2>Sprint Five</h2>
             <hr />
           </div>
@@ -262,7 +263,7 @@
               standard best practices.
             </p>
           </div>
-          <div class="col-12 mt-4">
+          <div class="col-12 mt-5">
             <h2>Sprint Six</h2>
             <hr />
           </div>
@@ -296,6 +297,7 @@
         </div>
       </div>
     </section>
+    <!-- /. Sprints Section -->
 
     <!-- Footer -->
     <footer class="page-footer font-small bg-footer text-white">
