--- a/help.html
+++ b/help.html
@@ -26,7 +26,7 @@
     <header class="sticky-top">
       <div class="container">
         <!-- Navigation main structure code from https://bootsnipp.com/snippets/vlXGB and adapted to the project -->
-        <nav class="navbar navbar-expand-lg navbar-light bg-white sticky-top">
+        <nav class="navbar navbar-expand-lg navbar-light bg-white">
           <a class="navbar-brand" href="index.html">
             <img
               src="https://i.imgur.com/ka262uI.png"
