--- a/slack.html
+++ b/slack.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <link
       rel="icon"
-      href="https://i.imgur.com/TInzWTN.png"
+      href="https://i.imgur.com/1OvoNNN.png"
       type="image/png"
       sizes="16x16"
     />
