Improved readme URLs targets

--- a/signup.html
+++ b/signup.html
@@ -78,7 +78,7 @@
         <div class="row">
           <div class="col-12">
             <span><i class="fa fa-university"></i></span>
-            <h2>Join The Academy</h2>
+            <h2>Enter The Academy</h2>
           </div>
           <div class="col-12 hero-message mb-4">
             <h4>
