Improved footer external URLs attributes

--- a/faq.html
+++ b/faq.html
@@ -172,7 +172,7 @@
       <div class="container">
         <div class="row text-center d-flex justify-content-center">
           <div class="col-md-2 footer-logo">
-            <a href="https://codeinstitute.net/" target="_blank"
+            <a href="https://codeinstitute.net/" rel="noopener" target="_blank"
               ><img
                 src="https://i.imgur.com/XeDBzqr.png"
                 alt="Code Institute Logo"
@@ -180,15 +180,23 @@
             /></a>
           </div>
           <div class="col-sm-offset-3 col-sm-2 col-md-offset-0 col-md-1">
-            <a href="https://codeinstitute.net/privacy-policy/" target="_blank"
+            <a
+              href="https://codeinstitute.net/privacy-policy/"
+              rel="noopener"
+              target="_blank"
               >Privacy</a
             >
           </div>
-          <div class="col-sm-offset-0 col-sm-2 col-md-1 active">
-            <a href="faq.html">FAQ <span class="sr-only">(current)</span></a>
+          <div class="col-sm-offset-0 col-sm-2 col-md-1">
+            <a href="faq.html">FAQ</a>
           </div>
           <div class="col-sm-2 col-md-1">
-            <a href="mailto:startupacademy@codeinstitute.net">Contact</a>
+            <a
+              href="mailto:startupacademy@codeinstitute.net"
+              rel="noopener"
+              target="_blank"
+              >Contact</a
+            >
           </div>
           <div
             class="col-xs-7 col-sm-12 col-md-offset-1 col-md-4 button-message"
