--- a/topics.html
+++ b/topics.html
@@ -304,7 +304,7 @@
       <div class="container">
         <div class="row text-center d-flex justify-content-center">
           <div class="col-md-2 footer-logo">
-            <a href="https://codeinstitute.net/" target="_blank"
+            <a href="https://codeinstitute.net/" rel="noopener" target="_blank"
               ><img
                 src="https://i.imgur.com/XeDBzqr.png"
                 alt="Code Institute Logo"
@@ -312,7 +312,10 @@
             /></a>
           </div>
           <div class="col-sm-offset-3 col-sm-2 col-md-offset-0 col-md-1">
-            <a href="https://codeinstitute.net/privacy-policy/" target="_blank"
+            <a
+              href="https://codeinstitute.net/privacy-policy/"
+              rel="noopener"
+              target="_blank"
               >Privacy</a
             >
           </div>
@@ -320,7 +323,12 @@
             <a href="faq.html">FAQ</a>
           </div>
           <div class="col-sm-2 col-md-1">
-            <a href="mailto:startupacademy@codeinstitute.net">Contact</a>
+            <a
+              href="mailto:startupacademy@codeinstitute.net"
+              rel="noopener"
+              target="_blank"
+              >Contact</a
+            >
           </div>
           <div
             class="col-xs-7 col-sm-12 col-md-offset-1 col-md-4 button-message"
