Improved external URLs attributes overall

--- a/faq.html
+++ b/faq.html
@@ -83,6 +83,7 @@
               Contact us
               <a
                 href="mailto:startupacademy@codeinstitute.net"
+                rel="noopener"
                 target="_blank"
                 aria-label="Startup Academy Email Address"
                 >here</a
