--- a/help.html
+++ b/help.html
@@ -91,13 +91,17 @@
               individuals in the programme, please post it on the
               <a
                 href="https://code-institute-room.slack.com/messages/startups/"
+                rel="noopener"
                 target="_blank"
                 >Slack channel</a
               >.
             </p>
             <p>
               If you have a specific technical issue, please email us at
-              <a href="mailto:startupacademy@codeinstitute.net" target="_blank"
+              <a
+                href="mailto:startupacademy@codeinstitute.net"
+                rel="noopener"
+                target="_blank"
                 >startupacademy@codeinstitute.net</a
               >.
             </p>
@@ -112,7 +116,10 @@
               If you believe you are being harassed or you come across content
               that you consider it violates our values, please report this to us
               at
-              <a href="mailto:startupacademy@condeinstitute.net" target="_blank"
+              <a
+                href="mailto:startupacademy@condeinstitute.net"
+                rel="noopener"
+                target="_blank"
                 >startupacademy@condeinstitute.net</a
               >.
             </p>
