--- a/signup.html
+++ b/signup.html
@@ -143,6 +143,7 @@
                 information please review our
                 <a
                   href="https://codeinstitute.net/privacy-policy/"
+                  rel="noopener"
                   target="_blank"
                   >Privacy Policy</a
                 >.
@@ -164,6 +165,7 @@
                 By clicking <em>Sign Up</em> you agree to our
                 <a
                   href="https://codeinstitute.net/terms-and-conditions/"
+                  rel="noopener"
                   target="_blank"
                   >Terms of service</a
                 >
