--- a/slack.html
+++ b/slack.html
@@ -90,6 +90,8 @@
           <div class="col-sm-3 hero-button">
             <a
               href="https://code-institute-room.slack.com/messages/startups/"
+              rel="noopener"
+              target="_blank"
               class="btn btn-primary btn-slack"
               aria-label="Startup Channel Button"
               >Join The Startup Channel</a
