--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
           </button>
 
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav ml-auto topnav mb-3">
+            <ul class="navbar-nav ml-auto topnav">
               <li class="nav-item active">
                 <a class="nav-link" href="index.html"
                   >Home <span class="sr-only">(current)</span></a
