--- a/signup.html
+++ b/signup.html
@@ -47,7 +47,7 @@
           </button>
 
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav ml-auto topnav mb-3">
+            <ul class="navbar-nav ml-auto topnav text-center">
               <li class="nav-item">
                 <a class="nav-link" href="index.html">Home</a>
               </li>
