Added reference to Carlos in faq

--- a/faq.html
+++ b/faq.html
@@ -149,7 +149,12 @@
             <hr />
             <h3>8. Who is conducting the sprints?</h3>
             <p>
-              Carlos, in collaboration with a great group of entrepreneurs and
+              <a
+                href="https://soundcloud.com/codeinstitute/fully-stacked-podcast-ep-1-startups"
+                rel="noopener"
+                target="_blank"
+                >Carlos</a
+              >, in collaboration with a great group of entrepreneurs and
               industry experts, will conduct the sprints.
             </p>
             <hr />
