Improve page titles

--- a/slack.html
+++ b/slack.html
@@ -19,7 +19,7 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.min.css"
     />
     <link rel="stylesheet" href="assets/css/styles.css" />
-    <title>Startup Academy</title>
+    <title>Slack Channel | Startup Academy</title>
   </head>
   <body>
     <!-- Header / Navigation -->
