--- a/topics.html
+++ b/topics.html
@@ -19,7 +19,7 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.min.css"
     />
     <link rel="stylesheet" href="assets/css/styles.css" />
-    <title>Startup Academy</title>
+    <title>Sprints & Topics | Startup Academy</title>
   </head>
   <body>
     <!-- Header / Navigation -->
