--- a/faq.html
+++ b/faq.html
@@ -60,9 +60,7 @@
                 <a class="nav-link" href="help.html">Help</a>
               </li>
               <li class="nav-item">
-                <a class="btn btn-primary" type="button" href="signup.html"
-                  >Sign Up</a
-                >
+                <a class="btn btn-primary" href="signup.html">Sign Up</a>
               </li>
             </ul>
           </div>
@@ -212,7 +210,6 @@
           <div class="col-xs-5 col-sm-12 col-md-2">
             <a
               class="btn btn-light"
-              type="button"
               href="signup.html"
               aria-label="Sign Up Button"
               >Sign Up</a
