--- a/signup.html
+++ b/signup.html
@@ -61,7 +61,7 @@
                 <a class="nav-link" href="help.html">Help</a>
               </li>
               <li class="nav-item active">
-                <a class="btn btn-primary" type="button" href="signup.html"
+                <a class="btn btn-primary" href="signup.html"
                   >Sign Up <span class="sr-only">(current)</span></a
                 >
               </li>
@@ -216,7 +216,6 @@
           <div class="col-xs-5 col-sm-12 col-md-2">
             <a
               class="btn btn-light"
-              type="button"
               href="signup.html"
               aria-label="Sign Up Button"
               >Sign Up</a
