Improve css and index hero icon positioning

--- a/index.html
+++ b/index.html
@@ -77,13 +77,11 @@
     <section class="hero hero-index">
       <div class="container">
         <div class="row">
-          <div class="col-12 col-lg-2 hero-logo">
+          <div class="col-12 hero-logo">
             <img
               src="https://i.imgur.com/0iWem9K.png"
               alt="Startup Academy Icon White"
             />
-          </div>
-          <div class="col-12 col-lg-10 hero-title">
             <h1>Startup Academy</h1>
           </div>
           <div class="col-12 hero-message">
