Added faq link inside help page

--- a/help.html
+++ b/help.html
@@ -85,6 +85,10 @@
             <h3>For Your Questions & Feedback</h3>
             <hr />
             <p>
+              You can review our Frequently Asked Questions by
+              <a href="faq.html" rel="noopener">clicking here</a>.
+            </p>
+            <p>
               If you consider it's a general question that can help other
               individuals in the programme, please post it on the
               <a
