Improved CSS and form phone number field

--- a/signup.html
+++ b/signup.html
@@ -128,7 +128,7 @@
               <!-- Phone number -->
               <label for="phoneNumber">Phone Number: <span>*</span></label>
               <input
-                type="text"
+                type="tel"
                 id="phoneNumber"
                 name="phoneNumber"
                 class="form-control mb-4"
